# rules_swc

examples/plugins/: BUILD.bazel  expected_rc.js  expected_rcdict.js  expected_simple.js  in.ts  minify.swcrc
examples/plugins/plugin-transform-imports/: BUILD.bazel  package.json  swc_plugin_transform_imports.wasm
swc/: BUILD.bazel  defs.bzl  providers.bzl  repositories.bzl
swc/private/: BUILD.bazel  plugins.swcrc  swc.bzl  swc_plugin.bzl  swc_plugin_config_info.bzl  versions.bzl
